configs/httpbin/ingress_httpbin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1  # TODO: Doc this. This was what was needed to make the path routing work properly
    #ingress.kubernetes.io/rewrite-target: 
spec:
  rules:
  - http:
      paths:
        - path: /httpbin, /cookies, /html, /get
          pathType: Exact
          backend:
            service:
              name: httpbin
              port:
                number: 8000
